--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
           icon.src = "weather-app-img/Clouds.png";
           
         } else if (data.weather[0].main == "Clear") {
-          icon.src = "weather-app-img/clear.png";
+          icon.src = "./weather-app-img/clear.png";
         } else if (data.weather[0].main == "Mist") {
-          icon.src = "weather-app-img/mist.png";
+          icon.src = "./weather-app-img/mist.png";
         } else if (data.weather[0].main == "Drizzle") {
-          icon.src = "weather-app-img/drizzle.png";
+          icon.src = "./weather-app-img/drizzle.png";
         } else if (data.weather[0].main == "Rain") {
-          icon.src = "weather-app-img/rain.png";
+          icon.src = "./weather-app-img/rain.png";
         } else if (data.weather[0].main == "Snow") {
-          icon.src = "weather-app-img/snow.png";
+          icon.src = "./weather-app-img/snow.png";
         } else if (data.weather[0].main == "Haze") {
-          icon.src = "weather-app-img/Clear.png";
+          icon.src = "./weather-app-img/Clear.png";
         } 
       }
 
